config/jenkins/kubernetes/jenkins-master-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-master
spec:
  selector:
    matchLabels:
      app: jenkins-master
  template:
    metadata:
      labels:
        app: jenkins-master
    spec:
      containers:
      - name: jenkins-master
        image: jenkins/jenkins:lts
        imagePullPolicy: Always
        volumeMounts:
        - name: volume
          mountPath: "/var/jenkins_home"
        livenessProbe:
          httpGet:
            path: /login
            port: 8080
          failureThreshold: 10
          initialDelaySeconds: 300
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /login
            port: 8080
          failureThreshold: 3
          initialDelaySeconds: 300
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          requests:
            cpu: "1"
            memory: 4Gi
          limits:
            cpu: "4"
            memory: 15Gi
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: jenkins-master-volume
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-master-nodeport
  labels:
    app: jenkins-master
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: slave
    port: 50000
    targetPort: 50000
    protocol: TCP
  selector:
    app: jenkins-master
